Fix spacing issues related to images. archive.php and author.php now follow show/hide nav above/below setting.

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ Theme URI: http://www.johnparris.com/alienship/
 Author: John Parris
 Author URI: http://www.johnparris.com/alienship/
 Description: Alien Ship is an HTML5 responsive starter theme for WordPress.
-Version: 0.53
+Version: 0.54
 License: GNU General Public License
 License URI: license.txt
 Tags: blue, green, silver, red, orange, white, black, light, dark, one-column, two-columns, right-sidebar, fixed-width, flexible-width, custom-colors, custom-header, custom-menu, threaded-comments, translation-ready, sticky-post, rtl-language-support, microformats, featured-images, post-formats
@@ -184,7 +184,7 @@ dl.nav.mobile dd.current-menu-item a,
 #main {
   clear: both;
   margin-bottom: 10px;
-  overflow: hidden; 
+  overflow: hidden;
 }
 
 #main-row {
@@ -208,6 +208,10 @@ article > .entry-content p {
 /* hgroup is the header area that contains the site title and description. */
 hgroup {
 	margin-bottom: 10px;
+}
+
+header#masthead {
+  padding-bottom: 20px;
 }
 
 mark,
@@ -241,7 +245,6 @@ img.wp-post-image {
 
 img.header-image,
 img.wp-post-image {
-  margin: 0 0 20px 0;
   max-width: 100%;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
@@ -256,6 +259,10 @@ img.wp-post-image {
   border: 0;
   padding: 0;
   max-width: 100%;
+}
+
+a.carousel-control {
+  font-family: "Helvetica Neue";
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -481,7 +488,7 @@ div.format-quote {
 }
 
 div.format-quote > .entry-content {
-  padding: 45px 0;
+  padding: 40px 0;
   margin-bottom: 75px;
 }
 
